kubernetes/staging/base/frontend/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtualservice
spec:
  hosts:
    - "agravelot.eu"
  gateways:
    - flasher-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
          headers:
            response:
              add:
                X-Robots-Tag: "noindex, nofollow"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: www-redirect-frontend-virtualservice
spec:
  gateways:
  - flasher-gateway
  hosts:
  - www.agravelot.eu
  http:
  - match:
    - authority:
        exact:
          www.agravelot.eu
    redirect:
      authority: agravelot.eu
